--- a/package.json
+++ b/package.json
@@ -1,12 +1,25 @@
 {
+  "name": "fincbook",
+  "version": "1.0.0",
+  "homepage": "https://tXOR50.github.io/my_bookkeeping",
+  "scripts": {
+    "start": "vite",
+    "build": "vite build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
+  },
   "dependencies": {
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.8",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-bootstrap": "^2.10.9",
     "react-chartjs-2": "^5.3.0",
     "react-router-dom": "^7.3.0"
   },
   "devDependencies": {
-    "gh-pages": "^6.3.0"
+    "gh-pages": "^6.3.0",
+    "vite": "^4.0.0",
+    "@vitejs/plugin-react": "^4.0.0"
   }
 }
